@@ -32,7 +32,6 @@
 % kanji=16 {kanji}
 \write16{⺀::\the\kcatcode"2E80}% U+2E80 CJK Radicals Supplement
 \write16{⼀::\the\kcatcode"2F00}% U+2F00 Kangxi Radicals
-\write16{⿰::\the\kcatcode"2FF0}% U+2FF0 Ideographic Description Characters
 \write16{ㄅ::\the\kcatcode"3105}% U+3105 Bopomofo
 \write16{㆐::\the\kcatcode"3190}% U+3190 Kanbun
 \write16{ㆠ::\the\kcatcode"31A0}% U+31A0 Bopomofo Extended
@@ -47,6 +46,7 @@
 \write16{𬺰::\the\kcatcode"2CEB0}% U+2CEB0 CJK Unified Ideographs Extension F
 \write16{丽::\the\kcatcode"2F800}% U+2F800 CJK Compatibility Ideographs Supplement
 \write16{𰀀::\the\kcatcode"30000}% U+30000 CJK Unified Ideographs Extension G
+\write16{𱍐::\the\kcatcode"31350}% U+31350 CJK Unified Ideographs Extension H
 
 % kana=17 {hiragana, katakana}
 \write16{あ::\the\kcatcode"3042}% U+3042 Hiragana
@@ -56,6 +56,20 @@
 \write16{𛀀::\the\kcatcode"1B000}% U+1B000 Kana Supplement
 \write16{𛄀::\the\kcatcode"1B100}% U+1B100 Kana Extended-A
 \write16{𛅐::\the\kcatcode"1B150}% U+1B150 Small Kana Extension
+
+% other_kchar=18 {cjk symbol codes}
+\write16{※::\the\kcatcode"203B}% U+203B General Punctuation
+\write16{℃::\the\kcatcode"2103}% U+2103 Letterlike Symbols
+\write16{Ⅻ::\the\kcatcode"216B}% U+216B Number Forms
+\write16{⇒::\the\kcatcode"21D2}% U+21D2 Arrows
+\write16{∂::\the\kcatcode"2202}% U+2202 Mathematical Operators
+\write16{①::\the\kcatcode"2460}% U+2460 Enclosed Alphanumerics
+\write16{┟::\the\kcatcode"251F}% U+251F Box Drawing
+\write16{☃::\the\kcatcode"2603}% U+2603 Miscellaneous Symbols
+\write16{⿰::\the\kcatcode"2FF0}% U+2FF0 Ideographic Description Characters
+\write16{〠::\the\kcatcode"3020}% U+3020 CJK Symbols and Punctuation
+\write16{㋐::\the\kcatcode"32D0}% U+32D0 Enclosed CJK Letters and Months
+\write16{㍿::\the\kcatcode"337F}% U+337F CJK Compatibility
 
 % hangul=19 {hangul codes}
 \write16{ᄀ::\the\kcatcode"1100}% U+1100 Hangul Jamo
